Attempt #3 to fix overflow on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-body {
+.body {
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -375,7 +375,6 @@ body {
     @include max-width;
     display: flex;
     flex-direction: column;
-    align-items: left;
     padding: 2rem 0;
   }
 
@@ -679,7 +678,7 @@ body {
     .column {
       @include column;
       align-items: center;
-      margin-bottom: 0 0 1rem 0;
+      margin: 0 0 1rem 0;
     }
   }
 
